good pass updated examples
