# bindings/ListKanbanStatusesResponse.ts
@@ -1,0 +1,7 @@
+// This file was generated by [ts-rs](https://github.com/Aleph-Alpha/ts-rs). Do not edit this file manually.
+
+/**
+ * Response wrapper for list-statuses: the external board's column names,
+ * in board order, for populating todo/doing/done mapping dropdowns.
+ */
+export type ListKanbanStatusesResponse = { statuses: Array<string>, };
